# terminus-cli

./: .gitignore  README.md  pyproject.toml
src/terminus/: __init__.py  __main__.py  agent.py  commands.py  config.py  constants.py  deps.py  repl.py  session.py  setup.py
src/terminus/prompts/: system.txt
src/terminus/tools/: __init__.py  code_analysis.py  dev_workflow.py  directory.py  file_discovery.py  find.py  git.py  grep.py  help_system.py  list.py  read_file.py  run_command.py  system_utilities.py  update_file.py  wrapper.py  write_file.py
src/terminus/ui/: __init__.py  colors.py  core.py  formatting.py  messages.py  panels.py
src/terminus/utils/: command.py  error.py  guide.py  input.py  logger.py
